--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 <body class="body">
     <h1> Il Grande Chuck Norris </h1>
     <p class="nes-balloon from-left nes-pointer" id="sub">
-        Iscrivi la categoria per una battuta
+        Scrivi la categoria per una battuta
     </p>
     <div class="nes-field">
         <input type="text" id="name_field" class="nes-input">
